feat: implement payment and userBooks API
