# src/controllers/cart.controller.ts
@@ -1,3 +1,4 @@
+import { HttpException } from '@/exceptions/HttpException';
 import CartService from '@/services/cart.service';
 import VoucherService from '@/services/voucher.service';
 
@@ -47,6 +48,24 @@ class CartController {
       const { id: userId } = req.user;
       const cart = await this.cartService.getCart(userId);
       res.status(200).json({ data: cart, message: 'cart' });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public payment = async (req, res, next) => {
+    try {
+      const { id: userId } = req.user;
+      const { voucherCode } = req.body;
+      const cart = await this.cartService.getCart(userId);
+      if (cart.books.length === 0) throw new HttpException(400, 'Cart is Empty');
+      const discount = voucherCode ? await this.voucherService.calculateDiscount(voucherCode, cart.totalPrice) : 0;
+      const finalPrice = cart.totalPrice - discount;
+      await this.cartService.handleIPG(userId, finalPrice, cart);
+      res.status(200).json({
+        data: { ...cart, discount, finalPrice: cart.totalPrice - discount },
+        message: 'SuccessFull Payment',
+      });
     } catch (error) {
       next(error);
     }
