# src/routes/cart.route.ts
@@ -19,6 +19,7 @@ class CartRoute implements Routes {
     this.router.post(`${this.path}`, authMiddleware, validationMiddleware(AddToCartDto, 'body'), this.bookController.addToCart);
     this.router.delete(`${this.path}`, authMiddleware, this.bookController.removeFromCart);
     this.router.post(`/voucher/apply`, authMiddleware, this.bookController.applyVoucher);
+    this.router.post(`/payment`, authMiddleware, this.bookController.payment);
   }
 }
 
