# swagger.yaml
@@ -535,6 +535,26 @@ paths:
         500:
           description: 'Server Error'
 
+  /user-books:
+    get:
+      tags:
+      - users
+      summary: get all user books
+      parameters:
+      - name: Authorization
+        in: header
+        description: the user token
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: 'All user books'
+        400:
+          description: 'Bad Request'
+        500:
+          description: 'Server Error'
+
 #  bookmarks
   /bookmarks:
     get:
@@ -634,6 +654,39 @@ paths:
           description: 'Bad Request'
         500:
           description: 'Server Error'
+
+  /payment:
+    post:
+      tags:
+      - cart
+      summary: buy books
+      parameters:
+      - name: Authorization
+        in: header
+        description: the user token
+        required: true
+        schema:
+          type: string
+      - name: body
+        in: body
+        description: the voucher code
+        required: false
+        schema:
+          type: object
+          properties:
+            voucherCode:
+              type: string
+              description: the voucher code
+
+      responses:
+        200:
+          description: 'All books in cart'
+        400:
+          description: 'Bad Request'
+        500:
+          description: 'Server Error'
+        501:
+          description: 'Not Implemented'
 
   /cart:
     get:
